--- a/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Bogus" Version="20.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="RichardSzalay.MockHttp" Version="5.0.0" />
     <!--<PackageReference Include="xunit" Version="2.2.0" />-->
     <!--<PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />-->
