--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -2,17 +2,23 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>MoxiWorks.Platform</PackageId>
-    <PackageVersion>1.2.15.0</PackageVersion>
+    <PackageVersion>1.2.18.0</PackageVersion>
     <Authors>Anthony Hatch</Authors>
     <Description>SDK for accessing the Moxi Works API in a .NET application.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>
       Moving to urlbuilder
     </PackageReleaseNotes>
-    <Copyright>Copyright 2019 (c) Moxi Works Corporation. All rights reserved.</Copyright>
+    <Copyright>Copyright 2020 (c) Moxi Works Corporation. All rights reserved.</Copyright>
     <PackageTags>sdk moxiworks Moxi</PackageTags>
-    <AssemblyVersion>1.2.15.0</AssemblyVersion>
-    <FileVersion>1.2.15.0</FileVersion>
+    <AssemblyVersion>1.2.18.0</AssemblyVersion>
+    <FileVersion>1.2.18.0</FileVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Title>MoxiCloud API Client Library</Title>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://moxiworks-platform.github.io/moxiworks-dotnet/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/moxiworks-platform/moxiworks-dotnet</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AnthonyHatch.UrlBuilder" Version="1.0.0" />
